acc + menu / css

--- a/menus.css
+++ b/menus.css
@@ -1,1 +1,197 @@
-style menu
+* {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  font-family: Roboto, sans-serif;
+}
+
+body {
+  background-color: gray;
+}
+
+a {
+  color: black;
+  text-decoration: none;
+}
+
+a:visited {
+  color: inherit;
+}
+
+i {
+  font-size: 1.4rem;
+}
+
+.container {
+  width: 375px;
+  margin: 0 auto;
+  background-color: white;
+}
+
+.header {
+  padding-top: 1rem;
+  position: relative;
+}
+
+.header__logo {
+  display: flex;
+  align-items: center;
+  padding: 0.5rem;
+  justify-content: center;
+}
+
+.header__logo i {
+  position: absolute;
+  left: 2rem;
+  top: 1.8rem;
+  align-items: middle;
+}
+
+.header__img {
+  width: 375px;
+  height: 280px;
+  object-fit: cover;
+}
+
+.main {
+  padding: 1rem;
+  padding-top: 2rem;
+  padding-bottom: 4rem;
+  background-color: #f6f6f6;
+  border-top-left-radius: 3rem;
+  border-top-right-radius: 3rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  position: relative;
+  margin-top: -4rem;
+}
+
+.main__resto {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding-right: 1.5rem;
+  margin-bottom: 2rem;
+}
+
+.main h1 {
+  font-size: 1.7rem;
+  font-family: Shrikhand;
+  font-weight: 400;
+}
+
+.main h2 {
+  text-transform: uppercase;
+}
+
+.main h3 {
+  font-size: 1.1rem;
+}
+
+.main__bar {
+  width: 40px;
+  height: 3px;
+  background-color: #99e2d0;
+  margin-bottom: 0.8rem;
+}
+
+.main__cards {
+  margin-bottom: 2rem;
+  margin-top: 1rem;
+}
+
+.main__card {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  background-color: white;
+  margin-bottom: 1rem;
+  border-radius: 1rem;
+  box-shadow: 2px 5px 5px 0px rgba(0, 0, 0, 0.1);
+}
+
+.main__desc {
+  display: flex;
+  justify-content: space-between;
+  padding: 0.3rem 0;
+  font-size: 0.9rem;
+}
+
+.main__desc p:nth-child(1) {
+  max-width: 266px;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
+}
+
+.main__card:hover .main__desc p:nth-child(1) {
+  max-width: 211px;
+}
+
+.main__txt {
+  flex: 1;
+  padding: 0.6rem 1rem;
+}
+
+.main__txt h3 {
+  max-width: 266px;
+}
+
+.main__check {
+  display: none;
+}
+
+.main__check i {
+  color: white;
+  position: relative;
+  top: 35%;
+  left: 60%;
+}
+
+.main__card:hover .main__check {
+  display: flex;
+  width: 55px;
+  background-color: #99e2d0;
+  border-top-right-radius: 1rem;
+  border-bottom-right-radius: 1rem;
+}
+
+.main__btn {
+  width: 50%;
+  margin: 1rem auto;
+  padding: 1rem;
+  border: none;
+  border-radius: 2rem;
+  background-color: violet;
+  font-weight: 500;
+  color: white;
+  box-shadow: 2px 5px 5px 0px rgba(0, 0, 0, 0.1);
+}
+
+.footer {
+  padding: 1.5rem;
+  background-color: #353535;
+  line-height: 1.5rem;
+  color: white;
+}
+
+.footer div {
+  display: flex;
+  align-items: center;
+}
+
+.footer h2 {
+  padding-bottom: 1rem;
+  font-family: Shrikhand;
+  font-weight: 400;
+}
+
+.footer i {
+  margin-right: 1rem;
+  font-size: 0.8rem;
+}
+
+.footer__icon {
+  width: 2rem;
+}
