--- a/style.css
+++ b/style.css
@@ -1,1 +1,180 @@
-style
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  background-color: grey;
+  font-family: Roboto, sans-serif;
+}
+
+h1 {
+  font-size: 1.5rem;
+  line-height: 1.8rem;
+  padding-top: 2rem;
+  padding-bottom: 1rem;
+}
+
+h2 {
+  font-size: 1rem;
+  line-height: 1.2rem;
+  padding-bottom: 0.3rem;
+}
+
+a {
+  color: black;
+  text-decoration: none;
+}
+
+a:visited {
+  color: inherit;
+}
+
+.container {
+  width: 375px;
+  margin: 0 auto;
+  background-color: white;
+}
+
+.header {
+  text-align: center;
+  padding: 1.25rem 0;
+  background-color: #f6f6f6;
+}
+
+.header__logo {
+  padding-bottom: 0.5rem;
+}
+
+.header__city {
+  background-color: #eaeaea;
+  font-weight: bold;
+  display: flex;
+  justify-content: center;
+  padding: 1rem;
+}
+
+.header__city p {
+  padding-left: 1.5rem;
+}
+
+.header button {
+  margin: 2rem;
+  padding: 1rem;
+  border: none;
+  border-radius: 2rem;
+  background-color: #ff79da;
+  color: white;
+  font-weight: 500;
+  box-shadow: 2px 5px 5px 0px rgba(0, 0, 0, 0.1);
+}
+
+.nav {
+  padding: 1.25rem;
+}
+
+.nav__card {
+  display: flex;
+  background-color: #f6f6f6;
+  padding: 1.5rem;
+  margin-left: 1rem;
+  margin-bottom: 2rem;
+  border-radius: 1.5rem;
+  box-shadow: 2px 5px 5px 0px rgba(0, 0, 0, 0.1);
+  align-items: center;
+}
+
+.nav__number {
+  width: 25px;
+  height: 25px;
+  display: flex;
+  background-color: purple;
+  border-radius: 100%;
+  align-items: center;
+  justify-content: center;
+  color: white;
+  margin-left: -35px;
+}
+
+.nav__card i {
+  margin: 0 1.4rem;
+}
+
+.nav__txt {
+  font-weight: 500;
+}
+
+.main {
+  background-color: #f6f6f6;
+  padding: 1rem;
+}
+
+.main__cards {
+  width: 335px;
+  margin: 0 auto;
+}
+
+.main__card {
+  background-color: white;
+  border-radius: 1rem;
+  box-shadow: 2px 5px 5px 0px rgba(0, 0, 0, 0.1);
+  width: 335px;
+  height: 250px;
+  margin-bottom: 1.25rem;
+  object-fit: cover;
+}
+
+.main__card img {
+  height: 175px;
+  width: 335px;
+  object-fit: cover;
+  object-position: bottom;
+  border-top-left-radius: 1rem;
+  border-top-right-radius: 1rem;
+}
+
+.main__subt {
+  padding: 0.5rem 1rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: middle;
+  vertical-align: middle;
+}
+
+.main__txt {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.main__coeur {
+  margin: auto 0;
+}
+
+.footer {
+  padding: 1.5rem;
+  background-color: #353535;
+  line-height: 1.5rem;
+  color: white;
+}
+
+.footer div {
+  display: flex;
+  align-items: center;
+}
+
+.footer h2 {
+  padding-bottom: 1rem;
+  font-family: Shrikhand;
+  font-weight: 400;
+}
+
+.footer i {
+  margin-right: 1rem;
+  font-size: 0.8rem;
+}
+
+.footer__icon {
+  width: 2rem;
+}
