--- a/style.css
+++ b/style.css
@@ -31,6 +31,10 @@ a:visited {
   color: inherit;
 }
 
+i {
+  font-size: 1.2rem;
+}
+
 .container {
   width: 375px;
   margin: 0 auto;
@@ -39,15 +43,18 @@ a:visited {
 
 .header {
   text-align: center;
-  padding: 1.25rem 0;
-  background-color: #f6f6f6;
 }
 
 .header__logo {
-  padding-bottom: 0.5rem;
+  padding: 0.5rem;
+  position: relative;
+  z-index: 1;
+  box-shadow: 0 0 0.7rem rgba(0, 0, 0, 0.25);
 }
 
 .header__city {
+  position: relative;
+  z-index: 0;
   background-color: #eaeaea;
   font-weight: bold;
   display: flex;
@@ -55,8 +62,13 @@ a:visited {
   padding: 1rem;
 }
 
-.header__city p {
-  padding-left: 1.5rem;
+.header__city i {
+  position: relative;
+  left: -2rem;
+}
+
+.header__slogan {
+  background-color: #f6f6f6;
 }
 
 .header button {
@@ -68,6 +80,7 @@ a:visited {
   color: white;
   font-weight: 500;
   box-shadow: 2px 5px 5px 0px rgba(0, 0, 0, 0.1);
+  background: linear-gradient(0deg, #9356dc 0%, #ff79da 100%);
 }
 
 .nav {
@@ -89,7 +102,7 @@ a:visited {
   width: 25px;
   height: 25px;
   display: flex;
-  background-color: purple;
+  background-color: #9356dc;
   border-radius: 100%;
   align-items: center;
   justify-content: center;
@@ -101,13 +114,52 @@ a:visited {
   margin: 0 1.4rem;
 }
 
+.nav__icon {
+  width: 4rem;
+}
+
 .nav__txt {
   font-weight: 500;
+}
+
+.purple {
+  background-color: #9256dc1e;
+}
+
+.purple i {
+  color: #9356dc;
 }
 
 .main {
   background-color: #f6f6f6;
   padding: 1rem;
+}
+
+.full {
+  color: #9356dc;
+  display: none;
+}
+
+.empty {
+  display: flex;
+}
+
+.main__coeur:hover .full {
+  display: flex;
+  animation: fadeIn 0.4s ease-in;
+}
+
+@keyframes fadeIn {
+  0% {
+    opacity: 0.3;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+.main__coeur:hover .empty {
+  display: none;
 }
 
 .main__cards {
@@ -166,6 +218,7 @@ a:visited {
 
 .footer h2 {
   padding-bottom: 1rem;
+  font-size: 1.2rem;
   font-family: Shrikhand;
   font-weight: 400;
 }
