--- a/testmenu.css
+++ b/testmenu.css
@@ -98,6 +98,7 @@ i {
 
 .empty {
   display: flex;
+  animation: fadeIn 0.4s ease-in;
 }
 
 .main__coeur:hover .full {
@@ -130,6 +131,19 @@ i {
   margin-top: 1rem;
 }
 
+.main__card {
+  animation: jump 0.5s ease-in;
+  animation-fill-mode: backwards;
+  display: flex;
+  overflow: hidden;
+  justify-content: space-between;
+  width: 100%;
+  background-color: white;
+  margin-bottom: 1rem;
+  border-radius: 1rem;
+  box-shadow: 2px 5px 5px 0px rgba(0, 0, 0, 0.1);
+}
+
 @keyframes jump {
   0% {
     transform: translateY(-0.3rem);
@@ -145,19 +159,6 @@ i {
     transform: translateY(0);
     opacity: 1;
   }
-}
-
-.main__card {
-  animation: jump 0.5s ease-in;
-  animation-fill-mode: backwards;
-  display: flex;
-  overflow: hidden;
-  justify-content: space-between;
-  width: 100%;
-  background-color: white;
-  margin-bottom: 1rem;
-  border-radius: 1rem;
-  box-shadow: 2px 5px 5px 0px rgba(0, 0, 0, 0.1);
 }
 
 .delay-0 {
@@ -177,7 +178,6 @@ i {
   flex-direction: column;
   flex: 1;
   padding: 0.6rem;
-  background-color: green;
   overflow: hidden;
 }
 
@@ -193,9 +193,7 @@ i {
 
 .main__prix {
   font-weight: bold;
-  background-color: red;
   display: flex;
-  justify-content: flex-end;
   align-items: flex-end;
   padding: 0.6rem;
 }
@@ -212,7 +210,7 @@ i {
   transition-duration: 0.7s;
 }
 
-.main__check i {
+.main__icon {
   color: white;
   transform: rotate(360deg);
   transition-duration: 0.6s;
@@ -223,17 +221,17 @@ i {
   margin-right: 0;
 }
 
-.main__card:hover .main__check i {
+.main__card:hover .main__icon {
   transform: rotate(0);
 }
 
 .main__btn {
-  width: 50%;
+  width: 11rem;
   margin: 1rem auto;
   padding: 1rem;
+  outline: none;
   border: none;
   border-radius: 2rem;
-  outline: none;
   font-weight: 500;
   color: white;
   box-shadow: 2px 5px 5px 0px rgba(0, 0, 0, 0.1);
@@ -266,5 +264,5 @@ i {
 }
 
 .footer__icon {
-  width: 2rem;
+  width: 1.5rem;
 }
