--- a/style.css
+++ b/style.css
@@ -77,10 +77,17 @@ i {
   outline: none;
   border: none;
   border-radius: 2rem;
+  cursor: pointer;
   color: white;
   font-weight: 500;
   box-shadow: 2px 5px 5px 0px rgba(0, 0, 0, 0.1);
-  background: linear-gradient(0deg, #9356dc 0%, #ff79da 100%);
+  background: linear-gradient(-8deg, #9356dc 0%, #ff79da 100%);
+}
+
+.header button:hover {
+  box-shadow: 2px 5px 5px 0px rgba(0, 0, 0, 0.2);
+  background: linear-gradient(-8deg, #9356dc 0%, #ff79da 100%);
+  transition: 0.5s;
 }
 
 .nav {
@@ -135,32 +142,54 @@ i {
   padding: 1rem;
 }
 
+.main__coeur {
+  height: 50px;
+}
+
 .full {
+  position: relative;
+  z-index: 1;
+  top: -0.7rem;
   color: #9356dc;
   display: none;
 }
 
 .empty {
+  position: relative;
+  top: 0.5rem;
+  z-index: 2;
   display: flex;
-  animation: fadeIn 0.4s ease-in;
 }
 
 .main__coeur:hover .full {
   display: flex;
-  animation: fadeIn 0.4s ease-in;
+  animation: fadeIn 0.3s ease-out;
 }
 
 @keyframes fadeIn {
   0% {
     opacity: 0.3;
+    transform: scale(0);
   }
   100% {
     opacity: 1;
+    transform: scale(1);
   }
 }
 
 .main__coeur:hover .empty {
-  display: none;
+  display: flex;
+}
+
+.main__coeur:active .full {
+  transform: scale(1.2);
+  color: red;
+  transition: 0.01s ease;
+}
+
+.main__coeur:active .empty {
+  transform: scale(1.2);
+  transition: 0.01s ease;
 }
 
 .main__cards {
