--- a/testmenu.css
+++ b/testmenu.css
@@ -92,32 +92,51 @@ i {
 }
 
 .full {
+  position: absolute;
+  top: 2.55rem;
+  right: 3rem;
+  z-index: 1;
   color: #9356dc;
   display: none;
 }
 
 .empty {
+  position: absolute;
+  top: 2.55rem;
+  right: 3rem;
+  z-index: 2;
   display: flex;
-  animation: fadeIn 0.4s ease-in;
 }
 
 .main__coeur:hover .full {
   display: flex;
-  animation: fadeIn 0.4s ease-in;
+  animation: fadeIn 0.3s ease-out;
 }
 
 @keyframes fadeIn {
-  /* faire grossir le coeur à l'intérieur */
   0% {
     opacity: 0.3;
+    transform: scale(0);
   }
   100% {
     opacity: 1;
+    transform: scale(1);
   }
 }
 
 .main__coeur:hover .empty {
-  display: none;
+  display: flex;
+}
+
+.main__coeur:active .full {
+  transform: scale(1.2);
+  color: red;
+  transition: 0.01s ease;
+}
+
+.main__coeur:active .empty {
+  transform: scale(1.2);
+  transition: 0.01s ease;
 }
 
 .main__bar {
@@ -133,7 +152,7 @@ i {
 }
 
 .main__card {
-  animation: jump 0.5s ease-in;
+  animation: fadeUp 0.5s ease-in;
   animation-fill-mode: backwards;
   display: flex;
   overflow: hidden;
@@ -145,17 +164,17 @@ i {
   box-shadow: 2px 5px 5px 0px rgba(0, 0, 0, 0.1);
 }
 
-@keyframes jump {
+@keyframes fadeUp {
   /* scattering */
   0% {
-    transform: translateY(-0.3rem);
+    transform: translateY(0.3rem);
     opacity: 0;
-  }
+    /*   }
   40% {
-    transform: translateY(-0.2rem);
+    transform: translateY(0.2rem);
   }
   80% {
-    transform: translateY(0.1rem);
+    transform: translateY(0.1rem); */
   }
   100% {
     transform: translateY(0);
@@ -168,11 +187,11 @@ i {
 }
 
 .delay-1 {
-  animation-delay: 0.5s;
+  animation-delay: 0.2s;
 }
 
 .delay-2 {
-  animation-delay: 1s;
+  animation-delay: 0.4s;
 }
 
 .main__txt {
@@ -204,28 +223,27 @@ i {
   background-color: #99e2d0;
   border-top-right-radius: 1rem;
   border-bottom-right-radius: 1rem;
-  margin: 0rem -4rem 0rem 0rem;
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 4rem;
-  transition-duration: 0.7s;
+  overflow: hidden;
+  width: 0rem;
+  transition-duration: 0.6s;
 }
 
 .main__icon {
-  color: white;
+  color: #99e2d0;
   transform: rotate(360deg);
-  transition-duration: 0.6s;
-  transition-delay: 0.1s;
+  transition-duration: 0.5s;
 }
 
 .main__card:hover .main__check {
-  /* elle grandit au lieu de taille fixe */
-  margin-right: 0;
+  width: 4rem;
 }
 
 .main__card:hover .main__icon {
   transform: rotate(0);
+  color: white;
 }
 
 .main__btn {
