--- a/style/index.scss
+++ b/style/index.scss
@@ -30,6 +30,7 @@ i {
 
   &__logo {
     padding: 0.5rem;
+    padding-top: 1rem;
     position: relative;
     z-index: 1;
     box-shadow: 0 0 0.7rem rgba(0, 0, 0, 0.25);
