--- a/style/index.css
+++ b/style/index.css
@@ -102,6 +102,7 @@ i {
 
 .header__logo {
   padding: 0.5rem;
+  padding-top: 1rem;
   position: relative;
   z-index: 1;
   -webkit-box-shadow: 0 0 0.7rem rgba(0, 0, 0, 0.25);
