--- a/style/menu.scss
+++ b/style/menu.scss
@@ -13,20 +13,19 @@ i {
 }
 
 .header {
-  padding-top: 1rem;
   position: relative;
 
   &__logo {
     display: flex;
     align-items: center;
     padding: 0.5rem;
+    padding-top: 1rem;
     justify-content: center;
 
     i {
       position: absolute;
       left: 2rem;
-      top: 1.8rem;
-      align-items: middle;
+      top: 1.4rem;
     }
   }
 
@@ -148,6 +147,10 @@ i {
 
   .delay-2 {
     animation-delay: 0.4s;
+  }
+
+  .delay-3 {
+    animation-delay: 0.6s;
   }
 
   &__txt {
