--- a/style/menu.css
+++ b/style/menu.css
@@ -282,6 +282,9 @@ i {
 
 .main__title {
   padding-bottom: 0.4rem;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
 }
 
 .main__desc {
