--- a/style/menu.scss
+++ b/style/menu.scss
@@ -163,6 +163,9 @@ i {
 
   &__title {
     padding-bottom: 0.4rem;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow: hidden;
   }
 
   &__desc {
