--- a/style/index.css
+++ b/style/index.css
@@ -91,7 +91,7 @@ i {
 }
 
 .container {
-  width: 375px;
+  width: 100%;
   margin: 0 auto;
   background-color: white;
 }
@@ -276,8 +276,17 @@ i {
 }
 
 .main__cards {
-  width: 335px;
-  margin: 0 auto;
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .main__card {
@@ -285,7 +294,7 @@ i {
   border-radius: 1rem;
   -webkit-box-shadow: 2px 5px 5px 0px rgba(0, 0, 0, 0.1);
           box-shadow: 2px 5px 5px 0px rgba(0, 0, 0, 0.1);
-  width: 335px;
+  width: 100%;
   height: 250px;
   margin-bottom: 1.25rem;
   -o-object-fit: cover;
@@ -293,8 +302,8 @@ i {
 }
 
 .main__card img {
-  height: 175px;
-  width: 335px;
+  height: 11rem;
+  width: 100%;
   -o-object-fit: cover;
      object-fit: cover;
   -o-object-position: bottom;
