--- a/style/index.scss
+++ b/style/index.scss
@@ -20,7 +20,7 @@ i {
 }
 
 .container {
-  width: 375px;
+  width: 100%;
   margin: 0 auto;
   background-color: white;
 }
@@ -150,22 +150,24 @@ i {
   }
 
   &__cards {
-    width: 335px;
-    margin: 0 auto;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
   }
 
   &__card {
     background-color: white;
     border-radius: 1rem;
     box-shadow: 2px 5px 5px 0px rgba(0, 0, 0, 0.1);
-    width: 335px;
+    width: 100%;
     height: 250px;
     margin-bottom: 1.25rem;
     object-fit: cover;
 
     img {
-      height: 175px;
-      width: 335px;
+      height: 11rem;
+      width: 100%;
       object-fit: cover;
       object-position: bottom;
       border-top-left-radius: 1rem;
