--- a/style/indexDesktop.css
+++ b/style/indexDesktop.css
@@ -1,1 +1,25 @@
-/* No CSS *//*# sourceMappingURL=indexDesktop.css.map */
+@media only screen and (min-width: 1200px) {
+  .container {
+    width: 100%;
+    max-width: 1400px;
+  }
+  .nav__cards {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
+  .nav__card {
+    -webkit-box-flex: 1;
+        -ms-flex: 1;
+            flex: 1;
+    margin: 0 2rem;
+    margin-bottom: 2rem;
+  }
+  .main__card {
+    max-width: 310px;
+  }
+}
+/*# sourceMappingURL=indexDesktop.css.map */
