--- a/style/indexTablette.css
+++ b/style/indexTablette.css
@@ -1,4 +1,23 @@
-body {
-  background-color: red;
+@media only screen and (min-width: 400px) {
+  .container {
+    width: 100%;
+    max-width: 800px;
+  }
+  .main__cards {
+    width: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+  .main__card {
+    margin: 1rem;
+    max-width: 350px;
+  }
 }
 /*# sourceMappingURL=indexTablette.css.map */
