--- a/style/menu.scss
+++ b/style/menu.scss
@@ -223,6 +223,10 @@ i {
   line-height: 1.5rem;
   color: white;
 
+  a {
+    color: white;
+  }
+
   div {
     display: flex;
     align-items: center;
