--- a/style/index.scss
+++ b/style/index.scss
@@ -196,6 +196,10 @@ i {
   line-height: 1.5rem;
   color: white;
 
+  a {
+    color: white;
+  }
+
   div {
     display: flex;
     align-items: center;
