--- a/style/indexDesktop.css
+++ b/style/indexDesktop.css
@@ -21,5 +21,13 @@
   .main__card {
     max-width: 310px;
   }
+  .footer__list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
 }
 /*# sourceMappingURL=indexDesktop.css.map */
