--- a/style/menuDesktop.css
+++ b/style/menuDesktop.css
@@ -40,5 +40,13 @@
     max-width: 350px;
     margin: 1rem auto;
   }
+  .footer__list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
 }
 /*# sourceMappingURL=menuDesktop.css.map */
