--- a/style/menuDesktop.scss
+++ b/style/menuDesktop.scss
@@ -39,4 +39,9 @@
     max-width: 350px;
     margin: 1rem auto;
   }
+
+  .footer__list {
+    display: flex;
+    justify-content: space-between;
+  }
 }
