--- a/style/indexDesktop.css
+++ b/style/indexDesktop.css
@@ -22,12 +22,13 @@
     max-width: 310px;
   }
   .footer__list {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
     -webkit-box-pack: justify;
         -ms-flex-pack: justify;
             justify-content: space-between;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
   }
 }
 /*# sourceMappingURL=indexDesktop.css.map */
