--- a/style/menuDesktop.css
+++ b/style/menuDesktop.css
@@ -41,12 +41,13 @@
     margin: 1rem auto;
   }
   .footer__list {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
     -webkit-box-pack: justify;
         -ms-flex-pack: justify;
             justify-content: space-between;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
   }
 }
 /*# sourceMappingURL=menuDesktop.css.map */
