--- a/style/__imports.scss
+++ b/style/__imports.scss
@@ -46,6 +46,59 @@
   }
 }
 
+@mixin loader {
+  @keyframes loading {
+    0% {
+      opacity: 0;
+    }
+
+    90% {
+      opacity: 0;
+    }
+
+    100% {
+      opacity: 1;
+    }
+  }
+  .container {
+    position: relative;
+    z-index: 1;
+    animation: loading 3s ease-in;
+  }
+
+  .loader {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin-left: -60px;
+    margin-top: -60px;
+    z-index: 0;
+    border: 16px solid $tertiary-color;
+    border-top: 16px solid $secondary-color;
+    border-radius: 50%;
+    width: 120px;
+    height: 120px;
+    animation: spin 2.5s linear;
+    animation-fill-mode: both;
+  }
+
+  @keyframes spin {
+    0% {
+      transform: rotate(0deg);
+      opacity: 1;
+    }
+
+    90% {
+      opacity: 1;
+    }
+
+    100% {
+      transform: rotate(720deg);
+      opacity: 0;
+    }
+  }
+}
+
 $primary-color: #9356dc;
 $secondary-color: #ff79da;
 $tertiary-color: #99e2d0;
