--- a/style/menu.scss
+++ b/style/menu.scss
@@ -2,6 +2,8 @@
 
 @include reset;
 
+@include loader;
+
 i {
   font-size: 1.4rem;
 }
@@ -137,13 +139,13 @@ i {
     box-shadow: 2px 5px 5px 0px rgba(0, 0, 0, 0.1);
   }
 
-  @for $i from 0 to 3 {
+  @for $i from 0 to 4 {
     .delay-#{$i} {
-      animation-delay: #{$i/7}s;
+      animation-delay: #{($i/7) + 3}s;
     }
   }
 
-/*   .delay-0 {
+  /*   .delay-0 {
     animation-delay: 0s;
   }
 
