--- a/style/__imports.scss
+++ b/style/__imports.scss
@@ -61,8 +61,6 @@
     }
   }
   .container {
-    position: relative;
-    z-index: 1;
     animation: loading 3s ease-in;
   }
 
@@ -72,14 +70,13 @@
     left: 50%;
     margin-left: -60px;
     margin-top: -60px;
-    z-index: 0;
     border: 16px solid $tertiary-color;
     border-top: 16px solid $secondary-color;
     border-radius: 50%;
     width: 120px;
     height: 120px;
     animation: spin 2.5s linear;
-    animation-fill-mode: both;
+    animation-fill-mode: forwards;
   }
 
   @keyframes spin {
