--- a/style/menu.css
+++ b/style/menu.css
@@ -98,8 +98,6 @@ a:visited {
 }
 
 .container {
-  position: relative;
-  z-index: 1;
   -webkit-animation: loading 3s ease-in;
           animation: loading 3s ease-in;
 }
@@ -110,7 +108,6 @@ a:visited {
   left: 50%;
   margin-left: -60px;
   margin-top: -60px;
-  z-index: 0;
   border: 16px solid #99e2d0;
   border-top: 16px solid #ff79da;
   border-radius: 50%;
@@ -118,8 +115,8 @@ a:visited {
   height: 120px;
   -webkit-animation: spin 2.5s linear;
           animation: spin 2.5s linear;
-  -webkit-animation-fill-mode: both;
-          animation-fill-mode: both;
+  -webkit-animation-fill-mode: forwards;
+          animation-fill-mode: forwards;
 }
 
 @-webkit-keyframes spin {
