--- a/sass/menu/_menu.scss
+++ b/sass/menu/_menu.scss
@@ -1,17 +1,7 @@
-@import "__imports.scss";
-
-@include reset;
-
 @include loader;
 
 i {
   font-size: 1.4rem;
-}
-
-.container {
-  width: 375px;
-  margin: 0 auto;
-  background-color: white;
 }
 
 .header {
@@ -42,7 +32,7 @@ i {
   padding: 1rem;
   padding-top: 2rem;
   padding-bottom: 4rem;
-  background-color: #f6f6f6;
+  background-color: $light-bg;
   border-top-left-radius: 3rem;
   border-top-right-radius: 3rem;
   display: flex;
@@ -80,7 +70,7 @@ i {
     top: 2.55rem;
     right: 3rem;
     z-index: 1;
-    color: #9356dc;
+    color: $primary-color;
     display: none;
   }
 
@@ -92,27 +82,7 @@ i {
     display: flex;
   }
 
-  .main__coeur {
-    &:hover .full {
-      display: flex;
-      animation: fadeIn 0.3s ease-out;
-    }
-
-    &:hover .empty {
-      display: flex;
-    }
-
-    &:active .full {
-      transform: scale(1.2);
-      color: red;
-      transition: 0.01s ease;
-    }
-
-    &:active .empty {
-      transform: scale(1.2);
-      transition: 0.01s ease;
-    }
-  }
+  @include coeurAnim;
 
   &__bar {
     width: 40px;
@@ -144,22 +114,6 @@ i {
       animation-delay: #{($i/7) + 3}s;
     }
   }
-
-  /*   .delay-0 {
-    animation-delay: 0s;
-  }
-
-  .delay-1 {
-    animation-delay: 0.2s;
-  }
-
-  .delay-2 {
-    animation-delay: 0.4s;
-  }
-
-  .delay-3 {
-    animation-delay: 0.6s;
-  } */
 
   &__txt {
     display: flex;
@@ -203,7 +157,7 @@ i {
 
   &__icon {
     color: #99e2d0;
-    transform: rotate(360deg);
+    transform: rotate(-360deg);
     transition-duration: 0.5s;
   }
 
@@ -225,39 +179,4 @@ i {
   }
 }
 
-.footer {
-  padding: 1.5rem;
-  background-color: #353535;
-  line-height: 1.5rem;
-  color: white;
-
-  a {
-    color: white;
-  }
-
-  h2 {
-    padding-bottom: 1rem;
-    font-size: 1.2rem;
-    font-family: Shrikhand;
-    font-weight: 400;
-  }
-
-  i {
-    margin-right: 1rem;
-    font-size: 0.8rem;
-  }
-
-  &__icon {
-    width: 2rem;
-  }
-}
-
-.footer__list {
-  display: flex;
-  flex-direction: column;
-
-  div {
-    display: flex;
-    align-items: center;
-  }
-}
+@include footer;
