--- a/sass/main-index.css
+++ b/sass/main-index.css
@@ -164,6 +164,13 @@ h1 {
   padding-bottom: 1rem;
 }
 
+.h1 {
+  font-size: 1.5rem;
+  line-height: 1.8rem;
+  padding-top: 2rem;
+  padding-bottom: 1rem;
+}
+
 h2 {
   font-size: 1rem;
   line-height: 1.2rem;
