--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -14,7 +14,7 @@
     border-radius: 50%;
     width: 120px;
     height: 120px;
-    animation: spin 2.5s linear;
+    animation: spin $loader-time linear;
     animation-fill-mode: forwards;
   }
 }
