--- a/sass/_index.scss
+++ b/sass/_index.scss
@@ -43,14 +43,24 @@ i {
     position: relative;
     z-index: 0;
     background-color: #eaeaea;
-    font-weight: bold;
     display: flex;
     justify-content: center;
     padding: 1rem;
 
-    & i {
-      position: relative;
-      left: -2rem;
+    & input {
+      width: 160px;
+      height: 20px;
+      border: none;
+      outline: none;
+      background-color: inherit;
+      text-align: center;
+      font-weight: bold;
+      font-size: 1rem;
+      margin-left: 10px;
+    }
+
+    ::placeholder {
+      color: inherit;
     }
   }
 
