--- a/sass/_menu.scss
+++ b/sass/_menu.scss
@@ -91,7 +91,7 @@ i {
   &__bar {
     width: 40px;
     height: 3px;
-    background-color: #99e2d0;
+    background-color: $tertiary-color;
     margin-bottom: 0.8rem;
   }
 
@@ -148,7 +148,7 @@ i {
   }
 
   &__check {
-    background-color: #99e2d0;
+    background-color: $tertiary-color;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -158,7 +158,7 @@ i {
   }
 
   &__icon {
-    color: #99e2d0;
+    color: $tertiary-color;
     transform: rotate(-360deg);
     transition-duration: 0.5s;
   }
