--- a/sass/_menu.scss
+++ b/sass/_menu.scss
@@ -1,5 +1,3 @@
-@include loader;
-
 i {
   font-size: 1.4rem;
 }
@@ -115,7 +113,7 @@ i {
 
   @for $i from 0 to 4 {
     .delay-#{$i} {
-      animation-delay: #{($i/7) + $loader-time};
+      animation-delay: #{$i/7};
     }
   }
 
