--- a/sass/main-menu.css
+++ b/sass/main-menu.css
@@ -260,6 +260,7 @@ i {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  opacity: 0;
 }
 
 .main__coeur:active .full {
@@ -414,13 +415,13 @@ i {
   font-weight: 500;
   -webkit-box-shadow: 2px 5px 5px 0px rgba(0, 0, 0, 0.1);
           box-shadow: 2px 5px 5px 0px rgba(0, 0, 0, 0.1);
-  background: linear-gradient(-8deg, #6023a9, #ff13be);
+  background: linear-gradient(-8deg, #9356dc, #ff79da);
 }
 
 .main button:hover {
   -webkit-box-shadow: 2px 5px 5px 0px rgba(0, 0, 0, 0.3);
           box-shadow: 2px 5px 5px 0px rgba(0, 0, 0, 0.3);
-  background: linear-gradient(-8deg, #9356dc, #ff79da);
+  background: linear-gradient(-8deg, #a16be0, #ff93e1);
   -webkit-transition: 0.5s;
   transition: 0.5s;
 }
