--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -46,6 +46,13 @@
 }
 
 @mixin coeurAnim {
+  .fa-gradient {
+    background: -webkit-gradient(linear, left top, left bottom, from($primary-color), to($secondary-color));
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+  }
+
   &__coeur {
     &:hover .full {
       display: flex;
@@ -55,11 +62,11 @@
     &:hover .empty {
       display: flex;
       opacity: 0;
+      transition: 0.5s;
     }
 
     &:active .full {
       transform: scale(1.2);
-      color: red;
       transition: 0.01s ease;
     }
 
